envoy-config/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  # host_rewrite: www.google.com
                  cluster: service_hello
          http_filters:
          - name: envoy.filters.http.router
          access_log: 
            - name: envoy.http_grpc_access_log 
              config:
                common_config:
                  grpc_service:
                    envoy_grpc:
                      cluster_name: accesslog_cluster
                  log_name: accesslog
  clusters:
  - name: service_hello
    connect_timeout: 5s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    # dns_lookup_family: V4_ONLY
    hosts:
      - socket_address:
          address: 0.0.0.0
          port_value: 8000
  - name: accesslog_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    hosts:
      - socket_address:
          address: 0.0.0.0
          port_value: 12000
    http2_protocol_options: {}
